# ZUtil

./: .gitignore  CMakeLists.txt  DOCUMENTATION.md  README.md  build.py  compile_flags.txt  doc_build.py  zen_core.hpp  zen_prelude.hpp  zutil.hpp
.cache/clangd/index/: log.cpp.DEA5FECE2A9CBB14.idx  log.hpp.4DC8C7698B94F522.idx  main.cpp.FBFA6E0B0AF8F3B2.idx
docs/: CONTAINER.md  Mod_Container.md  Mod_Core.md  Mod_Math.md
example/: basic_logging_utility.hpp  buffer.hpp  file_handling.hpp  logging.hpp  main.cpp  math.hpp  random.hpp  testing.hpp
include/: _ansi.hpp  _export.hpp  _pro_string.hpp  ansi.hpp  log.hpp  validate.hpp  z_assert.hpp  z_logger.cpp  z_logger.hpp  z_macros.hpp  z_types.hpp  zansi.hpp  zassert.hpp  zbuffer.hpp  zconfig.hpp  zfile.hpp  zlog.hpp  zmacros.hpp  znumeric_types.hpp  ztest.hpp
include/z_container/: z_double_buffer.hpp  z_fast_access_buffer.hpp  z_object_pool.hpp  z_spares_set.hpp
include/z_math/: z_constants.hpp  z_random.cpp  z_random.hpp
include/zcontainer/: zdouble_buffer.hpp  zfast_access_buffer.hpp  zobject_pool.hpp  zspares_set.hpp
src/: _pro_string.cpp  ansi.cpp  log.cpp  main.cpp  z_assert.cpp  z_logger.cpp  z_test.cpp  zansi.cpp  zassert.cpp  zlog.cpp  ztest.cpp
zen/container/: double_buffer.hpp  fast_access_buffer.hpp  iterator_wrapper.hpp  object_pool.hpp  spares_set.hpp
zen/core/: _ansi.hpp  _export.hpp  _pro_string.cpp  _pro_string.hpp  assert.cpp  assert.hpp  logger.cpp  logger.hpp  macros.hpp  test.cpp  test.hpp  types.hpp
zen/math/: angle.cpp  angle.hpp  constants.hpp  random.cpp  random.hpp  trignometry.hpp  utils.hpp  vec2.hpp
